# hulahop

./: .gitignore  Makefile.am  NEWS  build-snapshot.sh  configure.ac
components/: .gitignore  Makefile.am  hulahopAddCertException.idl  hulahopAddCertException.js  xulappinfo.js.in
components/browserhelper/: Makefile.am
data/: Makefile.am  prefs.js  prefs.js.in
data/chrome/: Makefile.am  brand.properties  chrome.manifest.in
debian/: changelog  control  copyright  dirs  generate-dir-list  info  rules  sugar-jhbuild-bin  sugar-jhbuild-emulator  sugar-jhbuild.desktop
debian/patches/: 00list  01_prefix_fix.dpatch
m4/: gecko.m4
python/: .gitignore  Makefile.am  __init__.py  config.py.in  hulahop.defs  hulahop.override  webview.py
src/: .gitignore  HulahopDirectoryProvider.cpp  HulahopDirectoryProvider.h  Makefile.am  __init__.py  browser.py  hulahop-browser.cpp  hulahop-browser.h  hulahop-web-view.cpp  hulahop-web-view.h  hulahop.cpp  hulahop.defs  hulahop.h  hulahop.override  hulahopmodule.c
tests/: test-app-components.py  test-browser.py  test-dom.py  test-pref-service.py  test-web-view.py
